Set up proper input capture protocol for tui, fixed disconnection resilience issue