@@ -16,7 +16,6 @@ import it.polimi.ingsw.utils.Logger;
 import it.polimi.ingsw.utils.LoggerLevel;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class SelectShipReconnectState extends CardState {
@@ -51,7 +50,7 @@ public class SelectShipReconnectState extends CardState {
 
 	@Override
 	public ClientCardState getClientCardState() {
-		List<PlayerColor> tmp = Collections.singletonList(awaiting.getColor());
+		List<PlayerColor> tmp = List.of(awaiting.getColor());
 		return new ClientNewCenterCardStateDecorator(this.resume.getClientCardState(), new ArrayList<>(tmp));
 	}
 
